# generate-template-aa

./: README.md  main.py  pyproject.toml  rename_template.py  setup.iss
