[project]
name = "flet-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet[all]==0.28.3",
]

[tool.flet]
org = "co.com.netapplications"
product = "Generate Best Practice Template"
company = "Net Applications"
copyright = "Copyright (C) AND3SIL4"
version = "1.0.0"
entry-point = "main.py"